[gd_scene load_steps=2 format=3 uid="uid://c5o8yxhwb2ut"]

[ext_resource type="Script" uid="uid://bsghm50endro1" path="res://scenes/ui/pause_menu/pause_menu.gd" id="1_kgchh"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_kgchh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="resume_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="main_menu_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Main Menu
"

[connection signal="pressed" from="VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/main_menu_button" to="." method="_on_main_menu_button_pressed"]
